// streams.proto holds metadata for the streams section of a data object. The
// streams section conains references to log streams within the data object.
syntax = "proto3";

package dataobj.metadata.streams.v1;

option go_package = "github.com/grafana/loki/pkg/dataobj/internal/streamsmd";

// Metadata describes the metadata for the streams section.
message Metadata {
  // Columns within the stream.
  repeated ColumnInfo columns = 1;
}

// ColumnInfo describes an individual column within the streams table.
message ColumnInfo {
  // Name of the column; set only for COLUMN_TYPE_LABEL.
  string name = 1;

  // Column type.
  ColumnType type = 2;

  // Total number of rows in the entire column.
  uint32 rows_count = 3;

  // Compression type used for all pages.
  CompressionType compression = 4;

  // Total uncompressed size of all pages in the column.
  uint32 uncompressed_size = 5;

  // Total compressed size of all pages in the column. Compressed size may
  // match uncompressed size if no compression is used.
  uint32 compressed_size = 6;

  // Byte offset from the start of the data object to the column's metadata.
  uint32 metadata_offset = 7;

  // Size of the column's metadata in bytes.
  uint32 metadata_size = 8;

  // Statistics for the column.
  Statistics statistics = 9;
}

// ColumnType represents the valid types that a stream's column can have.
enum ColumnType {
  // Invalid column type.
  COLUMN_TYPE_UNSPECIFIED = 0;

  // COLUMN_TYPE_MIN_TIMESTAMP is a column containing the minimum timestamp of
  // a stream.
  COLUMN_TYPE_MIN_TIMESTAMP = 1;

  // COLUMN_TYPE_MAX_TIMESTAMP is a column containing the maximum timestamp of
  // a stream.
  COLUMN_TYPE_MAX_TIMESTAMP = 2;

  // COLUMN_TYPE_LABEL is a column containing a label.
  COLUMN_TYPE_LABEL = 3;
}

// CompressionType represents the valid compression types that can be used for
// compressing a column's data page.
enum CompressionType {
  // Invalid compression type.
  COMPRESSION_TYPE_UNSPECIFIED = 0;

  // No compression.
  COMPRESSION_TYPE_NONE = 1;

  // Snappy compression.
  COMPRESSION_TYPE_SNAPPY = 2;

  // Zstd compression.
  COMPRESSION_TYPE_ZSTD = 3;
}

// Statistics about a coulmn or a page. All statistics are optional and are
// conditionally set depending on the column type.
message Statistics {
  // Minimum value. Set for COLUMN_TYPE_MIN_TIMESTAMP and
  // COLUMN_TYPE_MAX_TIMESTAMP.
  bytes min_value = 1;

  // Maximum value. Set for COLUMN_TYPE_MIN_TIMESTAMP and
  // COLUMN_TYPE_MAX_TIMESTAMP.
  bytes max_value = 2;

  // A sketch of distinct values. Set for COLUMN_TYPE_LABEL.
  uint32 count_distinct_sketch = 3;
}

// ColumnMetadata describes the metadata for a column.
message ColumnMetadata {
  // Pages within the column.
  repeated PageInfo pages = 1;
}

// Page describes an individual page within a column.
message PageInfo {
  // Uncompressed size of the page within the data object.
  uint32 uncompressed_size = 1;

  // Compressed size of the page within the data object. Compression size
  // will match uncompressed size if no compression is used.
  uint32 compressed_size = 2;

  // CRC32 checksum of the page data.
  uint32 crc32 = 3;

  // Number of rows in the page.
  uint32 rows_count = 4;

  // Compression type used for the page.
  CompressionType compression = 5;

  // Encoding type used for the page.
  EncodingType encoding = 6;

  // Byte offset from the start of the data object to the page's data.
  uint32 data_offset = 7;

  // Size of the page's data in bytes.
  uint32 data_size = 8;

  // Optional statistics for the page.
  Statistics statistics = 9;
}

// EncodingType holds various encoding types for data within a page.
enum EncodingType {
  // Invalid encoding type.
  ENCODING_TYPE_UNSPECIFIED = 0;

  // Plain encoding; data is stored as-is.
  ENCODING_TYPE_PLAIN = 1;

  // Delta encoding. The first value within the page is stored as-is, and
  // subsequent values are stored as the delta from the previous value.
  ENCODING_TYPE_DELTA = 2;
}
